Wed Jun  9 07:35:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8.mpd:
          Added OptimizeReferences and EnableCOMDATFolding to be setting
          without setting optimize as global flag

Tue Jun  8 16:06:10 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * MPC version 3.8.0 released.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv TZ)) (set-time-zone-rule UTC) (setq time (format-time-string %a %b %e %H:%M:%S %Z %Y (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: