@@ -1,3 +1,12 @@
+Mon Jun 14 22:06:56 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Only replace psuedo variables on actual keywords during variable
+          modification.  User defined keywords must not have the parameters
+          replaced in order for them to get the correct replacement values
+          later on.
+
 Wed Jun  9 07:35:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * templates/vc8.mpd:
